// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Tooltip
  overlay="Lorem ipsum dolor sit amet"
>
  <span
    className="text-middle"
  >
    <span
      className="note little-spacer-right"
    >
      event.category.VERSION
      :
    </span>
    <strong
      className="spacer-right"
    >
      Lorem ipsum
    </strong>
  </span>
</Tooltip>
`;

exports[`should render correctly: definition change 1`] = `
<DefinitionChangeEventInner
  branchLike={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": false,
      "name": "branch-6.7",
    }
  }
  event={
    Object {
      "category": "DEFINITION_CHANGE",
      "definitionChange": Object {
        "projects": Array [
          Object {
            "changeType": "ADDED",
            "key": "foo",
            "name": "Foo",
          },
        ],
      },
      "description": "Lorem ipsum dolor sit amet",
      "key": "E11",
      "name": "Lorem ipsum",
      "qualityGate": undefined,
    }
  }
/>
`;

exports[`should render correctly: no description 1`] = `
<span
  className="text-middle"
>
  <span
    className="note little-spacer-right"
  >
    event.category.VERSION
    :
  </span>
  <strong
    className="spacer-right"
  >
    Lorem ipsum
  </strong>
</span>
`;

exports[`should render correctly: rich quality gate 1`] = `
<RichQualityGateEventInner
  event={
    Object {
      "category": "QUALITY_GATE",
      "description": "Lorem ipsum dolor sit amet",
      "key": "E11",
      "name": "Lorem ipsum",
      "qualityGate": Object {
        "failing": Array [
          Object {
            "branch": "master",
            "key": "foo",
            "name": "Foo",
          },
          Object {
            "branch": "feature/bar",
            "key": "bar",
            "name": "Bar",
          },
        ],
        "status": "ERROR",
        "stillFailing": true,
      },
    }
  }
/>
`;
